add all exist functions

--- a/docs/jupyter/t_geometry/pointcloud.ipynb
+++ b/docs/jupyter/t_geometry/pointcloud.ipynb
@@ -36,34 +36,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PointCloud on CPU:0 [0 points].\n",
+      "Attributes: None. \n",
+      "\n",
+      "PointCloud on CUDA:0 [0 points].\n",
+      "Attributes: None. \n",
+      "\n",
+      "PointCloud on CPU:0 [2 points (Float32)].\n",
+      "Attributes: None. \n",
+      "\n",
+      "PointCloud on CPU:0 [2 points (Float64)].\n",
+      "Attributes: None. \n",
+      "\n",
+      "PointCloud on CUDA:0 [2 points (Float32)].\n",
+      "Attributes: None. \n",
+      "\n",
+      "PointCloud on CPU:0 [2 points (Float32)].\n",
+      "Attributes: None. \n",
+      "\n",
+      "PointCloud on CPU:0 [2 points (Float64)].\n",
+      "Attributes: None. \n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "\u001b[1;31m[Open3D Error] (open3d::t::geometry::PointCloud::PointCloud(const open3d::core::Tensor&)) /root/Open3D/cpp/open3d/t/geometry/PointCloud.cpp:72: Tensor has shape {4}, but is expected to have compatible with {None, 3}.\n\u001b[0;m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/root/Open3D/docs/jupyter/t_geometry/pointcloud.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f6f70656e3364227d/root/Open3D/docs/jupyter/t_geometry/pointcloud.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mprint\u001b[39m(pcd, \u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f6f70656e3364227d/root/Open3D/docs/jupyter/t_geometry/pointcloud.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# Error creation. The point cloud must have shape of (N, 3).\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f6f70656e3364227d/root/Open3D/docs/jupyter/t_geometry/pointcloud.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=26'>27</a>\u001b[0m pcd \u001b[39m=\u001b[39m o3d\u001b[39m.\u001b[39;49mt\u001b[39m.\u001b[39;49mgeometry\u001b[39m.\u001b[39;49mPointCloud(o3c\u001b[39m.\u001b[39;49mTensor([\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m], o3c\u001b[39m.\u001b[39;49mfloat32))\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: \u001b[1;31m[Open3D Error] (open3d::t::geometry::PointCloud::PointCloud(const open3d::core::Tensor&)) /root/Open3D/cpp/open3d/t/geometry/PointCloud.cpp:72: Tensor has shape {4}, but is expected to have compatible with {None, 3}.\n\u001b[0;m"
+     ]
+    }
+   ],
    "source": [
     "# Create a empty point cloud on CPU.\n",
     "pcd = o3d.t.geometry.PointCloud()\n",
-    "print(pcd)\n",
+    "print(pcd, '\\n')\n",
     "# Create a empty point cloud on GPU.\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Device(\"CUDA:0\"))\n",
-    "print(pcd)\n",
+    "print(pcd, '\\n')\n",
     "\n",
-    "# Create a point cloud from open3d tensor.\n",
+    "# Create a point cloud from open3d tensor with data type of float32.\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32))\n",
-    "print(pcd)\n",
-    "# Create a point cloud from open3d tensor with float64.\n",
+    "print(pcd, '\\n')\n",
+    "# Create a point cloud from open3d tensor with data type of float64.\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float64))\n",
-    "print(pcd)\n",
+    "print(pcd, '\\n')\n",
     "# Create a point cloud from open3d tensor on GPU.\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32, o3c.Device(\"CUDA:0\")))\n",
-    "print(pcd)\n",
+    "print(pcd, '\\n')\n",
     "\n",
     "# Special creation.\n",
     "# Create a point cloud from numpy array.\n",
     "pcd = o3d.t.geometry.PointCloud(np.array([[0, 0, 0], [1, 1, 1]], dtype=np.float32))\n",
-    "print(pcd)\n",
+    "print(pcd, '\\n')\n",
     "# Create a point cloud from python list.\n",
     "pcd = o3d.t.geometry.PointCloud([[0., 0., 0.], [1., 1., 1.]])\n",
-    "print(pcd)\n",
+    "print(pcd, '\\n')\n",
     "\n",
     "# Error creation. The point cloud must have shape of (N, 3).\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([0, 0, 0, 0], o3c.float32))"
@@ -80,9 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PointCloud on CPU:0 [2 points (Float32)].\n",
+      "Attributes: normals (dtype = Float32, shape = {2, 3}), labels (dtype = Int64, shape = {2}).\n"
+     ]
+    }
+   ],
    "source": [
     "map_to_tensors = {}\n",
     "# The `positions` attribute must be specified.\n",
@@ -490,6 +538,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Point cloud outlier removal\n",
+    "When collecting data from scanning devices, the resulting point cloud tends to contain noise and artifacts that one would like to remove. This demo below addresses the outlier removal features of Open3D.\n",
+    "\n",
+    "### Prepare input data\n",
+    "A point cloud is loaded and downsampled using `voxel_downsample`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load a ply point cloud, print it, and render it\n",
+      "Downsample the point cloud with a voxel of 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Load a ply point cloud, print it, and render it\")\n",
+    "sample_pcd_data = o3d.data.PCDPointCloud()\n",
+    "pcd = o3d.t.io.read_point_cloud(sample_pcd_data.path)\n",
+    "o3d.visualization.draw_geometries([pcd.to_legacy()],\n",
+    "                                  zoom=0.3412,\n",
+    "                                  front=[0.4257, -0.2125, -0.8795],\n",
+    "                                  lookat=[2.6172, 2.0475, 1.532],\n",
+    "                                  up=[-0.0694, -0.9768, 0.2024])\n",
+    "\n",
+    "print(\"Downsample the point cloud with a voxel of 0.02\")\n",
+    "voxel_down_pcd = pcd.voxel_down_sample(voxel_size=0.02)\n",
+    "o3d.visualization.draw_geometries([voxel_down_pcd.to_legacy()],\n",
+    "                                  zoom=0.3412,\n",
+    "                                  front=[0.4257, -0.2125, -0.8795],\n",
+    "                                  lookat=[2.6172, 2.0475, 1.532],\n",
+    "                                  up=[-0.0694, -0.9768, 0.2024])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, use `uniform_down_sample` to downsample the point cloud by collecting every n-th points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Every 5th points are selected\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Every 5th points are selected\")\n",
+    "uni_down_pcd = pcd.uniform_down_sample(every_k_points=5)\n",
+    "o3d.visualization.draw_geometries([uni_down_pcd.to_legacy()],\n",
+    "                                  zoom=0.3412,\n",
+    "                                  front=[0.4257, -0.2125, -0.8795],\n",
+    "                                  lookat=[2.6172, 2.0475, 1.532],\n",
+    "                                  up=[-0.0694, -0.9768, 0.2024])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##$ Select down sample\n",
+    "The following helper function uses `select_by_mask`, which takes a binary mask to output only the selected points. The selected points and the non-selected points are visualized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_inlier_outlier(cloud : o3d.t.geometry.PointCloud, mask : o3c.Tensor):\n",
+    "    inlier_cloud = cloud.select_by_mask(mask)\n",
+    "    outlier_cloud = cloud.select_by_mask(mask, invert=True)\n",
+    "\n",
+    "    print(\"Showing outliers (red) and inliers (gray): \")\n",
+    "    outlier_cloud = outlier_cloud.paint_uniform_color([1.0, 0, 0])\n",
+    "    inlier_cloud.paint_uniform_color([0.8, 0.8, 0.8])\n",
+    "    inlier_cloud = o3d.visualization.draw_geometries([inlier_cloud.to_legacy(), outlier_cloud.to_legacy()],\n",
+    "                                      zoom=0.3412,\n",
+    "                                      front=[0.4257, -0.2125, -0.8795],\n",
+    "                                      lookat=[2.6172, 2.0475, 1.532],\n",
+    "                                      up=[-0.0694, -0.9768, 0.2024])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Radius outlier removal\n",
+    "`radius_outlier_removal` removes points that have few neighbors in a given sphere around them. Two parameters can be used to tune the filter to your data:\n",
+    "\n",
+    "- `nb_points`, which lets you pick the minimum amount of points that the sphere should contain.\n",
+    "- `radius`, which defines the radius of the sphere that will be used for counting the neighbors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radius oulier removal\n",
+      "Showing outliers (red) and inliers (gray): \n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: StatisticalOutlierRemoval is not implemented yet.\n",
+    "print(\"Radius oulier removal\")\n",
+    "cl, ind = voxel_down_pcd.remove_radius_outliers(nb_points=16, search_radius=0.05)\n",
+    "display_inlier_outlier(voxel_down_pcd, ind)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Convex hull\n",
     "The convex hull of a point cloud is the smallest convex set that contains all points. Open3D contains the method `compute_convex_hull` that computes the convex hull of a point cloud. The implementation is based on [Qhull](http://www.qhull.org/).\n",
     "\n",
@@ -582,14 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: -0.05x + -0.10y + 0.99z + -1.08 = 0\n"
+      "Plane equation: -0.06x + -0.10y + 0.99z + -1.06 = 0\n"
      ]
     }
    ],
@@ -598,7 +780,8 @@
     "pcd = o3d.t.io.read_point_cloud(sample_pcd_data.path)\n",
     "plane_model, inliers = pcd.segment_plane(distance_threshold=0.01,\n",
     "                                            ransac_n=3,\n",
-    "                                            num_iterations=1000)\n",
+    "                                            num_iterations=1000, \n",
+    "                                            probability=0.9999)\n",
     "[a, b, c, d] = plane_model.numpy().tolist()\n",
     "print(f\"Plane equation: {a:.2f}x + {b:.2f}y + {c:.2f}z + {d:.2f} = 0\")\n",
     "\n",
@@ -627,13 +810,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convert mesh to a point cloud and estimate dimensions\n",
+      "Define parameters used for hidden_point_removal\n",
+      "Get all points that are visible from given view point\n",
+      "Visualize result\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Convert mesh to a point cloud and estimate dimensions\")\n",
     "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
+    "# Tensor TriangleMesh not supported this function yet.\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
     "pcd = mesh.sample_points_poisson_disk(5000)\n",
@@ -642,15 +837,54 @@
     "o3d.visualization.draw_geometries([pcd])\n",
     "\n",
     "print(\"Define parameters used for hidden_point_removal\")\n",
-    "camera = [0, 0, diameter]\n",
+    "camera = o3d.core.Tensor([0, 0, diameter], o3d.core.float32)\n",
     "radius = diameter * 100\n",
     "\n",
     "print(\"Get all points that are visible from given view point\")\n",
+    "pcd = o3d.t.geometry.PointCloud.from_legacy(pcd)\n",
     "_, pt_map = pcd.hidden_point_removal(camera, radius)\n",
+    "pcd = pcd.select_by_index(pt_map)\n",
     "\n",
     "print(\"Visualize result\")\n",
-    "pcd = pcd.select_by_index(pt_map)\n",
-    "o3d.visualization.draw_geometries([pcd])"
+    "o3d.visualization.draw_geometries([pcd.to_legacy()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Boundary Detection\n",
+    "Open3D implements the boundary detection algorithm inspired by [PCL](https://pointclouds.org/documentation/classpcl_1_1_boundary_estimation.html). The algorithm find the boundary points among a unordered point cloud by analysising the angle between the normals of a point and its neighbors. The method has four arguments: `radius` and `max_nn` specify the hybrid nearest search parameters. The `angle_threshold` defines the maximum angle between the normals of a point and its neighbors to be considered a boundary point. The functions returns the boundary points and a boolean tensor of the same size as the input point cloud, where `True` indicates a boundary point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detect 10846 noundary points from 196133 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "ply_point_cloud = o3d.data.DemoCropPointCloud()\n",
+    "pcd = o3d.t.io.read_point_cloud(ply_point_cloud.point_cloud_path)\n",
+    "\n",
+    "boundarys, mask = pcd.compute_boundary_points(0.02, 30)\n",
+    "# TODO: not good to get size of points.\n",
+    "print(f\"Detect {boundarys.point.positions.shape[0]} bnoundary points from {pcd.point.positions.shape[0]} points.\")\n",
+    "\n",
+    "boundarys = boundarys.paint_uniform_color([1.0, 0.0, 0.0])\n",
+    "pcd = pcd.paint_uniform_color([0.6, 0.6, 0.6])\n",
+    "o3d.visualization.draw_geometries([pcd.to_legacy(), boundarys.to_legacy()],\n",
+    "                                      zoom=0.3412,\n",
+    "                                      front=[0.3257, -0.2125, -0.8795],\n",
+    "                                      lookat=[2.6172, 2.0475, 1.532],\n",
+    "                                      up=[-0.0694, -0.9768, 0.2024])"
    ]
   }
  ],
