--- a/docs/jupyter/t_geometry/pointcloud.ipynb
+++ b/docs/jupyter/t_geometry/pointcloud.ipynb
@@ -20,7 +20,13 @@
     "import matplotlib.pyplot as plt\n",
     "import copy\n",
     "import os\n",
-    "import sys"
+    "import sys\n",
+    "\n",
+    "# only needed for tutorial, monkey patches visualization\n",
+    "sys.path.append('..')\n",
+    "import open3d_tutorial as o3dtut\n",
+    "# change to True if you want to interact with the visualization windows\n",
+    "o3dtut.interactive = not \"CI\" in os.environ"
    ]
   },
   {
@@ -82,6 +88,7 @@
     "# Create a empty point cloud on CPU.\n",
     "pcd = o3d.t.geometry.PointCloud()\n",
     "print(pcd, '\\n')\n",
+    "\n",
     "# Create a empty point cloud on GPU.\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Device(\"CUDA:0\"))\n",
     "print(pcd, '\\n')\n",
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +200,10 @@
      "output_type": "stream",
      "text": [
       "Load a ply point cloud, print it, and render it\n",
-      "PointCloud on CPU:0 [196133 points (Float32)].\n",
-      "Attributes: curvature (dtype = Float32, shape = {196133, 1}), normals (dtype = Float32, shape = {196133, 3}), colors (dtype = UInt8, shape = {196133, 3}).\n"
+      "PointCloud on CPU:0 [196133 points (Float32)] Attributes: curvature (dtype = Float32, shape = {196133, 1}), normals (dtype = Float32, shape = {196133, 3}), colors (dtype = UInt8, shape = {196133, 3}).\n",
+      "FEngine (64 bits) created at 0x7f6178e51010 (threading is enabled)\n",
+      "\u001b[1;33m[Open3D WARNING] Tensor point cloud colors must have DType of Float32 not UInt8. Converting.\u001b[0;m\n",
+      "FEngine resolved backend: OpenGL\n"
      ]
     }
    ],
@@ -204,11 +213,12 @@
     "pcd = o3d.t.io.read_point_cloud(ply_point_cloud.path)\n",
     "print(pcd)\n",
     "# TODO: (use `draw` instead?)\n",
-    "o3d.visualization.draw_geometries([pcd.to_legacy()],\n",
-    "                                  zoom=0.3412,\n",
-    "                                  front=[0.4257, -0.2125, -0.8795],\n",
-    "                                  lookat=[2.6172, 2.0475, 1.532],\n",
-    "                                  up=[-0.0694, -0.9768, 0.2024])"
+    "# o3d.visualization.draw_geometries([pcd.to_legacy()],\n",
+    "#                                   zoom=0.3412,\n",
+    "#                                   front=[0.4257, -0.2125, -0.8795],\n",
+    "#                                   lookat=[2.6172, 2.0475, 1.532],\n",
+    "#                                   up=[-0.0694, -0.9768, 0.2024])\n",
+    "o3d.visualization.draw([pcd])"
    ]
   },
   {
@@ -255,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
