--- a/docs/jupyter/t_geometry/pointcloud.ipynb
+++ b/docs/jupyter/t_geometry/pointcloud.ipynb
@@ -43,7 +43,7 @@
     "print(pcd, '\\n')\n",
     "\n",
     "# Create a empty point cloud on GPU.\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Device(\"CUDA:0\"))\n",
+    "pcd = o3d.t.geometry.PointCloud(o3c.Device(\"cuda:0\"))\n",
     "print(pcd, '\\n')\n",
     "\n",
     "# Create a point cloud from open3d tensor with data type of float32.\n",
@@ -53,7 +53,7 @@
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float64))\n",
     "print(pcd, '\\n')\n",
     "# Create a point cloud from open3d tensor on GPU.\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32, o3c.Device(\"CUDA:0\")))\n",
+    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32, o3c.Device(\"cuda:0\")))\n",
     "print(pcd, '\\n')\n",
     "\n",
     "# Special creation.\n",
@@ -194,7 +194,7 @@
     "    \n",
     "**Note:** \n",
     "\n",
-    "Currently, the method return the voxel coordinates of the point cloud.\n",
+    "Currently, the method returns the voxel coordinates of the point cloud.\n",
     "\n",
     "</div>"
    ]
@@ -219,7 +219,7 @@
    "metadata": {},
    "source": [
     "### Farthest point downsampling\n",
-    "Farthest point sampling sample the point cloud by selecting the farthest point from the current selected point cloud iteratively. It is use to sample the point cloud to a fixed number of points which holds the maximum geometrical information of the original point cloud."
+    "Farthest point sampling samples the point cloud by selecting the farthest point from the current selected point iteratively. It is used to sample the point cloud to a fixed number of points which holds the maximum geometrical information of the original point cloud."
    ]
   },
   {
@@ -275,7 +275,7 @@
    "source": [
     "`estimate_normals` computes the normal for every point. The function finds adjacent points and calculates the principal axis of the adjacent points using covariance analysis.\n",
     "\n",
-    "The two key arguments `radius = 0.1` and `max_nn = 30` specifies search radius and maximum nearest neighbor. It has 10cm of search radius, and only considers up to 30 neighbors to save computation time. If only `max_nn` or `radius` is specified, the function will use knn or radius search respectively. \n",
+    "The two key arguments `radius = 0.1` and `max_nn = 30` specifies search radius and maximum nearest neighbor. It has 10cm of search radius, and only considers up to 30 neighbors to save computation time. If only `max_nn` or `radius` is specified (`downpcd.estimate_normals(30, None)` or `downpcd.estimate_normals(None, 0.01)`), the function will use knn or radius search respectively. \n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "    \n",
@@ -656,6 +656,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To achieve the stable results with specific random seed, you can set `probability` to 1.0, which will force the executed iteration equal to `num_iterations`. (Since `0.16.0`, the `segment_plane` function is parallel, and the iteration will be updated by the equation: `iter = log(1 - probability) / log(1 - fitness ^ ransac_n)`, where `fitness` is the ratio of inliers number and total number of points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o3d.utility.random.seed(0)\n",
+    "\n",
+    "plane_model, inliers = pcd.segment_plane(distance_threshold=0.01,\n",
+    "                                            ransac_n=3,\n",
+    "                                            num_iterations=1000, \n",
+    "                                            probability=1.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hidden point removal\n",
     "Imagine you want to render a point cloud from a given view point, but points from the background leak into the foreground because they are not occluded by other points. For this purpose we can apply a hidden point removal algorithm. In Open3D the method by [\\[Katz2007\\]](../reference.html#Katz2007) is implemented that approximates the visibility of a point cloud from a given view without surface reconstruction or normal estimation."
    ]
@@ -695,7 +716,7 @@
    "metadata": {},
    "source": [
     "## Boundary Detection\n",
-    "Open3D implements the boundary detection algorithm inspired by [PCL](https://pointclouds.org/documentation/classpcl_1_1_boundary_estimation.html). The algorithm find the boundary points among a unordered point cloud by analysising the angle between the normals of a point and its neighbors. The method has four arguments: `radius` and `max_nn` specify the hybrid nearest search parameters. The `angle_threshold` defines the maximum angle between the normals of a point and its neighbors to be considered a boundary point. The functions returns the boundary points and a boolean tensor of the same size as the input point cloud, where `True` indicates a boundary point."
+    "Open3D implements the boundary detection algorithm inspired by [PCL](https://pointclouds.org/documentation/classpcl_1_1_boundary_estimation.html). The algorithm find the boundary points among a unordered point cloud by analyzing the angle among the normals of a point and its neighbors. The method has three arguments: `radius` and `max_nn` specify the hybrid nearest search parameters; The `angle_threshold` defines the maximum angle between the normals of a point and its neighbors to be considered as a boundary point. The functions returns the boundary points and a boolean tensor of the same size as the input point cloud."
    ]
   },
   {
@@ -723,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('open3d')",
+   "display_name": "Python 3.8.10 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -737,12 +758,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d3ff712f491db3b4ccd20005f84e312b261650c105d83adbc3f83f5ecf60b94b"
+    "hash": "3c9f9a500ca684ee401c6824dc59bb17f7418a54cdadde026de4b201d5bd57e6"
    }
   }
  },
